package v62.tp;
import "sys/Common.proto";
import "v62/FPTData.proto";

option java_package = "nirvana.hall.protocol.v62.tp";
option java_outer_classname = "TPCardProto";

//新增
message TPCardAddRequest{
    extend sys.BaseRequest{
        optional TPCardAddRequest cmd = 9001;
    }
    required TPCard card = 1;
}
message TPCardAddResponse{
    extend sys.BaseResponse{
        optional TPCardAddResponse cmd = 9001;
    }
}
//删除
message TPCardDelRequest{
    extend sys.BaseRequest{
        optional TPCardDelRequest cmd = 9010;
    }
    required string card_id = 1;
}
message TPCardDelResponse{
    extend sys.BaseResponse{
        optional TPCardDelResponse cmd = 9010;
    }
}
//修改
message TPCardUpdateRequest{
    extend sys.BaseRequest{
        optional TPCardUpdateRequest cmd = 9011;
    }
    required TPCard card = 1;
}
message TPCardUpdateResponse{
    extend sys.BaseResponse{
        optional TPCardUpdateResponse cmd = 9011;
    }
}
//查询
message TPCardGetRequest{
    extend sys.BaseRequest{
        optional TPCardGetRequest cmd = 9012;
    }
    required string card_id = 1;
}
message TPCardGetResponse{
    extend sys.BaseResponse{
        optional TPCardGetResponse cmd = 9012;
    }
    required TPCard card = 1;
}
